--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@strapi/provider-upload-cloudinary": "^4.2.3",
     "@strapi/strapi": "4.25.13",
     "pg": "8.6.0",
-    "strapi-plugin-populate-deep": "^0.1.2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^5.3.4",
+    "strapi-plugin-populate-deep": "^0.1.2",
+    "styled-components": "^5.3.11"
   },
   "author": {
     "name": "A Strapi developer"
