--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi",
+    "build:prod": "NODE_ENV=production npm run build",
     "serve:prod": "NODE_ENV=production pm2 start server.js --name massalud-api"
   },
   "dependencies": {
